fix(Hero): adjust padding for better layout on mobile view

--- a/app/_modules/Hero/Hero.module.scss
+++ b/app/_modules/Hero/Hero.module.scss
@@ -14,12 +14,11 @@
     z-index: 2;
     width: 100%;
     height: 100%;
-    padding: $spacing-lg;
+    padding-bottom: $spacing-lg;
 
     @include mobile {
       height: 100vh;
-      padding: $spacing-md;
-      // Use flex layout to create equal spacing above and below info
+      padding-bottom: $spacing-md;
       @include flex(column, flex-start, center);
     }
 
